Add Brandon as maintainer
Signed-off-by: Josh Dolitsky <josh@dolit.ski>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @dmcgowan @jzelinskie @jonjohnsonjr @jdolitsky @mikebrow @stevvooe @vbatts
+* @dmcgowan @jzelinskie @jonjohnsonjr @jdolitsky @mikebrow @stevvooe @sudo-bmitch @vbatts
